# egogrip

./: .gitignore  LICENSE  README.md
app/: README.md
app-native/: README.md  build.gradle.kts  settings.gradle.kts
app-native/app/: build.gradle.kts
app-native/app/src/main/: AndroidManifest.xml
app-native/capture/: build.gradle.kts
app-native/capture/src/main/: AndroidManifest.xml
app-native/optional/: UvcClient.kt
app/Assets/Egogrip/: EgogripCameraPreview.cs  EgogripCaptureConfig.cs  EgogripClock.cs  EgogripHud.cs  EgogripPassthrough.cs  EgogripPoseRecorder.cs  EgogripWristCamera.cs
app/Assets/Plugins/Android/: egogrip-capture.aar  mainTemplate.gradle
app/Assets/Scenes/: Capture.unity
app/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
app/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
configs/: calibration.example.json  dual_gripper.json  single_gripper.json  wrist_only.json
docs/: ARCHITECTURE.md  CALIBRATION.md  CAPTURE_CONFIG.md  DATA_FORMAT.md  DESIGN_DECISIONS.md  HARDWARE.md  NATIVE_APP_PLAN.md  PICO_ENTERPRISE_NOTES.md  PICO_TOMORROW.md  PORTABILITY.md  ROADMAP.md  SYNC.md  UNITY_POSE_SETUP.md  UNITY_STEPS.md  UPGRADE_PLAN.md
docs/adapters/: ANDROID_PHONE.md  QUEST3.md
firmware/rp2040-gripper/: README.md
firmware/rp2040-gripper/arduino/: README.md
firmware/rp2040-gripper/circuitpython/: README.md  boot.py  code.py
firmware/rp2040-gripper/src/: main.c
hardware/: README.md  bom.csv
native-plugin/: README.md
pipeline/: README.md  pyproject.toml
pipeline/egogrip_pipeline/: __init__.py  calibration.py  config.py  demo.py  export_lerobot.py  geometry.py  io.py  schema.py  sync.py  synthetic.py  validate.py  video.py
pipeline/tests/: test_calibration.py  test_config.py  test_geometry.py  test_lerobot.py  test_native_episode.py  test_pipeline.py  test_portability.py  test_synthetic.py  test_video.py
schema/: capture_config.schema.json  capture_manifest.schema.json
(+14 files in other folders)
