[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egogrip-pipeline"
version = "0.1.0"
description = "Convert egogrip raw capture episodes into LeRobot datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mark Leggiero" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    # video decode/remux — pick one during Phase 6:
    # "av>=11",            # PyAV
    # "opencv-python>=4.8",
    # dataset target — pin once LeRobot version is fixed:
    # "lerobot",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
egogrip-export = "egogrip_pipeline.export_lerobot:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["egogrip_pipeline*"]

[tool.ruff]
line-length = 100
