[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "egogrip-pipeline"
version = "0.1.0"
description = "Convert egogrip raw capture episodes into LeRobot datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mark Leggiero" }]
dependencies = [
    "numpy>=1.24",          # the only hard dependency
]

[project.optional-dependencies]
validate = ["jsonschema>=4.0"]   # full schema validation (falls back to structural checks)
lerobot = ["lerobot"]            # LeRobot v2 export target (pin once version is fixed)
video = ["av>=11"]               # video transcode for LeRobot export (Phase 6)
dev = ["pytest>=7", "ruff>=0.4", "mypy>=1.8", "jsonschema>=4.0"]

[project.scripts]
egogrip-export = "egogrip_pipeline.export_lerobot:main"
egogrip-validate = "egogrip_pipeline.validate:main"
egogrip-demo = "egogrip_pipeline.demo:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["egogrip_pipeline*"]

[tool.ruff]
line-length = 100
